Tracking events from engine; overflow annotation popup bug fix

--- a/app/src/global.less
+++ b/app/src/global.less
@@ -18,6 +18,7 @@ body{
 }
 
 .top{
+	overflow: hidden;
 	position: absolute;
 	top: 0;
 	right: 0;
